// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:inputArray 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            data-role="container"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="array"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          颜色集合
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-ComboControl cxd-Form-control is-inline"
                    >
                      <div
                        class="cxd-Combo cxd-Combo--multi cxd-Combo--hor"
                      >
                        <div
                          class="cxd-Combo-items"
                        >
                          <div
                            class="cxd-Combo-item"
                          >
                            <div
                              class="cxd-Combo-itemInner"
                            >
                              <div
                                class="cxd-Form cxd-Form--row cxd-Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="cxd-Form-row"
                                >
                                  <div
                                    class="cxd-Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="cxd-Form-item cxd-Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="cxd-Form-rowInner"
                                      >
                                        <div
                                          class="cxd-Form-control cxd-TextControl"
                                        >
                                          <div
                                            class="cxd-TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="amis"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <a
                              class="cxd-Combo-delBtn "
                              data-position="bottom"
                              data-tooltip="删除"
                            >
                              <icon-mock
                                classname="icon icon-status-close"
                                icon="status-close"
                              />
                            </a>
                          </div>
                        </div>
                        <div
                          class="cxd-Combo-toolbar"
                        >
                          <button
                            class="cxd-Button cxd-Button--default cxd-Button--size-default cxd-Combo-addBtn"
                            type="button"
                          >
                            <icon-mock
                              classname="icon icon-plus-fine"
                              icon="plus-fine"
                            />
                            <span>
                              新增
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputArray with draggable & draggableTip 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            data-role="container"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="array"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          颜色集合
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-ComboControl cxd-Form-control is-inline"
                    >
                      <div
                        class="cxd-Combo cxd-Combo--multi cxd-Combo--hor is-draggable"
                      >
                        <div
                          class="cxd-Combo-items"
                        >
                          <div
                            class="cxd-Combo-item"
                          >
                            <div
                              class="cxd-Combo-itemDrager"
                            >
                              <a
                                data-position="bottom"
                                data-tooltip="拖拽排序"
                              >
                                <icon-mock
                                  classname="icon icon-drag-bar"
                                  icon="drag-bar"
                                />
                              </a>
                            </div>
                            <div
                              class="cxd-Combo-itemInner"
                            >
                              <div
                                class="cxd-Form cxd-Form--row cxd-Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="cxd-Form-row"
                                >
                                  <div
                                    class="cxd-Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="cxd-Form-item cxd-Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="cxd-Form-rowInner"
                                      >
                                        <div
                                          class="cxd-Form-control cxd-TextControl"
                                        >
                                          <div
                                            class="cxd-TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="red"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <a
                              class="cxd-Combo-delBtn "
                              data-position="bottom"
                              data-tooltip="删除"
                            >
                              <icon-mock
                                classname="icon icon-status-close"
                                icon="status-close"
                              />
                            </a>
                          </div>
                          <div
                            class="cxd-Combo-item"
                          >
                            <div
                              class="cxd-Combo-itemDrager"
                            >
                              <a
                                data-position="bottom"
                                data-tooltip="拖拽排序"
                              >
                                <icon-mock
                                  classname="icon icon-drag-bar"
                                  icon="drag-bar"
                                />
                              </a>
                            </div>
                            <div
                              class="cxd-Combo-itemInner"
                            >
                              <div
                                class="cxd-Form cxd-Form--row cxd-Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="cxd-Form-row"
                                >
                                  <div
                                    class="cxd-Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="cxd-Form-item cxd-Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="cxd-Form-rowInner"
                                      >
                                        <div
                                          class="cxd-Form-control cxd-TextControl"
                                        >
                                          <div
                                            class="cxd-TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="blue"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <a
                              class="cxd-Combo-delBtn "
                              data-position="bottom"
                              data-tooltip="删除"
                            >
                              <icon-mock
                                classname="icon icon-status-close"
                                icon="status-close"
                              />
                            </a>
                          </div>
                          <div
                            class="cxd-Combo-item"
                          >
                            <div
                              class="cxd-Combo-itemDrager"
                            >
                              <a
                                data-position="bottom"
                                data-tooltip="拖拽排序"
                              >
                                <icon-mock
                                  classname="icon icon-drag-bar"
                                  icon="drag-bar"
                                />
                              </a>
                            </div>
                            <div
                              class="cxd-Combo-itemInner"
                            >
                              <div
                                class="cxd-Form cxd-Form--row cxd-Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="cxd-Form-row"
                                >
                                  <div
                                    class="cxd-Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="cxd-Form-item cxd-Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="cxd-Form-rowInner"
                                      >
                                        <div
                                          class="cxd-Form-control cxd-TextControl"
                                        >
                                          <div
                                            class="cxd-TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="green"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <a
                              class="cxd-Combo-delBtn "
                              data-position="bottom"
                              data-tooltip="删除"
                            >
                              <icon-mock
                                classname="icon icon-status-close"
                                icon="status-close"
                              />
                            </a>
                          </div>
                        </div>
                        <div
                          class="cxd-Combo-toolbar"
                        >
                          <button
                            class="cxd-Button cxd-Button--default cxd-Button--size-default cxd-Combo-addBtn"
                            type="button"
                          >
                            <icon-mock
                              classname="icon icon-plus-fine"
                              icon="plus-fine"
                            />
                            <span>
                              新增
                            </span>
                          </button>
                          <span
                            class="cxd-Combo-dragableTip"
                          >
                            我是拖拽提示
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputArray with minLength & maxLength 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            data-role="container"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="array"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          颜色集合
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-ComboControl cxd-Form-control is-inline"
                    >
                      <div
                        class="cxd-Combo cxd-Combo--multi cxd-Combo--hor"
                      >
                        <div
                          class="cxd-Combo-items"
                        >
                          <div
                            class="cxd-Combo-item"
                          >
                            <div
                              class="cxd-Combo-itemInner"
                            >
                              <div
                                class="cxd-Form cxd-Form--row cxd-Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="cxd-Form-row"
                                >
                                  <div
                                    class="cxd-Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="cxd-Form-item cxd-Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="cxd-Form-rowInner"
                                      >
                                        <div
                                          class="cxd-Form-control cxd-TextControl"
                                        >
                                          <div
                                            class="cxd-TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="green"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="cxd-Combo-item"
                          >
                            <div
                              class="cxd-Combo-itemInner"
                            >
                              <div
                                class="cxd-Form cxd-Form--row cxd-Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="cxd-Form-row"
                                >
                                  <div
                                    class="cxd-Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="cxd-Form-item cxd-Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="cxd-Form-rowInner"
                                      >
                                        <div
                                          class="cxd-Form-control cxd-TextControl"
                                        >
                                          <div
                                            class="cxd-TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value=""
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-Combo-toolbar"
                        >
                          <button
                            class="cxd-Button cxd-Button--default cxd-Button--size-default cxd-Combo-addBtn"
                            type="button"
                          >
                            <icon-mock
                              classname="icon icon-plus-fine"
                              icon="plus-fine"
                            />
                            <span>
                              新增
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputArray with removable & addable & addButtonText: false 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            data-role="container"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="array"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          颜色集合
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-ComboControl cxd-Form-control is-inline"
                    >
                      <div
                        class="cxd-Combo cxd-Combo--multi cxd-Combo--hor"
                      >
                        <div
                          class="cxd-Combo-items"
                        >
                          <div
                            class="cxd-Combo-item"
                          >
                            <div
                              class="cxd-Combo-itemInner"
                            >
                              <div
                                class="cxd-Form cxd-Form--row cxd-Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="cxd-Form-row"
                                >
                                  <div
                                    class="cxd-Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="cxd-Form-item cxd-Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="cxd-Form-rowInner"
                                      >
                                        <div
                                          class="cxd-Form-control cxd-TextControl"
                                        >
                                          <div
                                            class="cxd-TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="red"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="cxd-Combo-item"
                          >
                            <div
                              class="cxd-Combo-itemInner"
                            >
                              <div
                                class="cxd-Form cxd-Form--row cxd-Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="cxd-Form-row"
                                >
                                  <div
                                    class="cxd-Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="cxd-Form-item cxd-Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="cxd-Form-rowInner"
                                      >
                                        <div
                                          class="cxd-Form-control cxd-TextControl"
                                        >
                                          <div
                                            class="cxd-TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="blue"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-Combo-toolbar"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputArray with removable & addable & addButtonText: false 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            data-role="container"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-amis-name="array"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          颜色集合
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-ComboControl cxd-Form-control is-inline"
                    >
                      <div
                        class="cxd-Combo cxd-Combo--multi cxd-Combo--hor"
                      >
                        <div
                          class="cxd-Combo-items"
                        >
                          <div
                            class="cxd-Combo-item"
                          >
                            <div
                              class="cxd-Combo-itemInner"
                            >
                              <div
                                class="cxd-Form cxd-Form--row cxd-Combo-form"
                                novalidate=""
                              >
                                <input
                                  style="display: none;"
                                  type="submit"
                                />
                                <div
                                  class="cxd-Form-row"
                                >
                                  <div
                                    class="cxd-Form-col"
                                    style="flex: 1;"
                                  >
                                    <div
                                      class="cxd-Form-item cxd-Form-item--row"
                                      data-amis-name="flat"
                                      data-role="form-item"
                                    >
                                      <div
                                        class="cxd-Form-rowInner"
                                      >
                                        <div
                                          class="cxd-Form-control cxd-TextControl"
                                        >
                                          <div
                                            class="cxd-TextControl-input"
                                          >
                                            <input
                                              autocomplete="off"
                                              class=""
                                              name="flat"
                                              placeholder=""
                                              size="10"
                                              type="text"
                                              value="blue"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <a
                              class="cxd-Combo-delBtn "
                              data-position="bottom"
                              data-tooltip="删除"
                            >
                              <icon-mock
                                classname="icon icon-status-close"
                                icon="status-close"
                              />
                            </a>
                          </div>
                        </div>
                        <div
                          class="cxd-Combo-toolbar"
                        >
                          <button
                            class="cxd-Button cxd-Button--default cxd-Button--size-default cxd-Combo-addBtn"
                            type="button"
                          >
                            <icon-mock
                              classname="icon icon-plus-fine"
                              icon="plus-fine"
                            />
                            <span>
                              我是增加按钮
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
